--- a/apps/dashboard/.env.development
+++ b/apps/dashboard/.env.development
@@ -1,5 +1,15 @@
+# Only for development environment.
+
+# API
+VITE_APP_BASE_URL=http://localhost:8080
+
 VITE_PUBLIC_PATH=/
 
-VITE_USE_HTTPS=true
+#
+VITE_PORT = 5173
 
-VITE_GLOB_API_URL=/api
+# 
+VITE_PROXY = [["/api", "http://localhost:8080"]]
+
+# Whether to use mock
+VITE_USE_MOCK = true
