--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kreutzer/httpclient": "workspace:*",
     "@kreutzer/layouts": "workspace:*",
     "@kreutzer/router": "workspace:*",
     "@kreutzer/utils": "workspace:*",
     "axios": "^1.4.0",
-    "lodash": "^4.17.21",
     "pinia": "^2.1.6",
     "tdesign-icons-vue-next": "^0.1.12",
     "tdesign-vue-next": "^1.4.1",
@@ -21,9 +21,11 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@kreutzer/types": "workspace:*",
     "@types/node": "^20.4.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "less": "^4.1.3",
     "moment": "^2.29.4",
     "prettier": "^3.0.0",
