--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,9 +7,11 @@
     "clean": "pnpm rimraf node_modules && pnpm rimraf dist"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@kreutzer/types": "workspace:*"
+    "@kreutzer/types": "workspace:*",
+    "@types/lodash-es": "^4.17.8"
   }
 }
