--- a/packages/layouts/tsconfig.json
+++ b/packages/layouts/tsconfig.json
@@ -37,7 +37,8 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "context.ts"
   ],
   "references": [
     {
