--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,19 +4,25 @@
   "version": "0.0.0",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "bootstrap": "pnpm install",
+    "dev": "cross-env NODE_ENV=development vite",
+    "build": "cross-env NODE_ENV=production vue-tsc --noEmit && vite build",
+    "preview": "pnpm run build && vite preview",
+    "preview:dist": "vite preview",
+    "test": "echo \"no test specified,work in process\"",
+    "test:coverage": "echo \"no test:coverage specified,work in process\""
   },
   "dependencies": {
     "@kreutzer/httpclient": "workspace:*",
     "@kreutzer/layouts": "workspace:*",
+    "@kreutzer/stores": "workspace:*",
     "@kreutzer/router": "workspace:*",
     "@kreutzer/utils": "workspace:*",
     "axios": "^1.4.0",
     "pinia": "^2.1.6",
     "tdesign-icons-vue-next": "^0.1.12",
     "tdesign-vue-next": "^1.4.1",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -31,6 +37,8 @@
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   },
