--- a/apps/dashboard/tsconfig.json
+++ b/apps/dashboard/tsconfig.json
@@ -33,11 +33,11 @@
     },
   },
   "include": [
-    "src/**/*.js",
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
+    "**.js",
+    "**.ts",
+    "**.d.ts",
+    "**.tsx",
+    "**.vue"
   ],
   "references": [
     {
