--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,19 +6,24 @@
     "preinstall": "npx only-allow pnpm",
     "bootstrap": "pnpm install",
     "dev": "cross-env NODE_ENV=development vite",
+    "dev:ssr": "cross-env NODE_ENV=development node server",
     "build": "cross-env NODE_ENV=production vue-tsc --noEmit && vite build",
+    "build:client": "cross-env NODE_ENV=production vue-tsc --noEmit && vite build --outDir dist/client --ssrManifest",
+    "build:server": "cross-env NODE_ENV=production vue-tsc --noEmit && vite build --outDir dist/server --ssr src/entry-server.js",
     "preview": "pnpm run build && vite preview",
     "preview:dist": "vite preview",
     "test": "echo \"no test specified,work in process\"",
     "test:coverage": "echo \"no test:coverage specified,work in process\""
   },
   "dependencies": {
+    "@kreutzer/components": "workspace:*",
     "@kreutzer/httpclient": "workspace:*",
     "@kreutzer/layouts": "workspace:*",
-    "@kreutzer/stores": "workspace:*",
     "@kreutzer/router": "workspace:*",
+    "@kreutzer/stores": "workspace:*",
     "@kreutzer/utils": "workspace:*",
     "axios": "^1.4.0",
+    "express": "^4.18.2",
     "pinia": "^2.1.6",
     "tdesign-icons-vue-next": "^0.1.12",
     "tdesign-vue-next": "^1.4.1",
@@ -28,6 +33,7 @@
   },
   "devDependencies": {
     "@kreutzer/types": "workspace:*",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "cross-env": "^7.0.3",
