--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@kreutzer/components",
   "version": "0.1.0",
-  "main": "src/index.ts",
+  "main": "index.ts",
+  "module": "index.ts",
   "scripts": {
     "clean": "pnpm rimraf node_modules && pnpm rimraf dist"
   },
   "dependencies": {
     "@kreutzer/types": "workspace:*",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "xterm": "^5.2.1",
+    "xterm-addon-attach": "^0.8.0",
+    "xterm-addon-web-links": "^0.8.0"
   }
 }
