--- a/apps/dashboard/.env.production
+++ b/apps/dashboard/.env.production
@@ -1,13 +1,13 @@
 # Only for production environment.
 
 # API
-VITE_APP_BASE_URL=https://leryn.top/api
+VITE_APP_BASE_URL = https://kreutzer.leryn.top
 
-VITE_PUBLIC_PATH=/
+VITE_PUBLIC_PATH = /
 
 # Whether to use mock
 VITE_USE_MOCK = false
 
 VITE_BUILD_COMPRESS = gzip
 
-VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
+VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = true
