--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -42,10 +42,12 @@
     "moment": "^2.29.4",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
+    "rollup": "^3.28.1",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.5",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.8.5"
   },
   "env": {
